release 1.6
- Fixed issue 637
  http://java.net/jira/browse/JERSEY-637
  Jersey now adds a whitespace after the semicolon separating the content
  type parameters.
- Grizzly 2 http-server support moved from the experimental
  area to the new jersey-grizzly2 module in the com.sun.jersey space
- *Breaking change*: Grizzly 1 support in a separate module
  Grizzly 1 support used to be part of the jersey-server module
  This is no longer the case. If you rely on Grizzly 1 you will
  need to use the jersey-grizzly dependency instead of just jersey-server 
- Re-fixed issue 320
  http://java.net/jira/browse/JERSEY-320
  Interning document parser needs to be used because of JAXB.
- *Breaking change*: Fixed issue 607
  http://java.net/jira/browse/JERSEY-607
  OAuthProvider is no longer registered using the init param property.
  It needs to be added as any other provider (e.g. by binding it).

release 1.5 (01-2011)
- Fixed issue 624
  http://java.net/jira/browse/JERSEY-624
  Async client API incorrectly handled TypeListener<ClientResponse>
- Fixed issue 620
  http://java.net/jira/browse/JERSEY-620
  Exceptions thrown by a nullary constructor of a resource were incorrectly
  handled.
- Fixed issue 615
  http://java.net/jira/browse/JERSEY-615
  Removed unnecessary unused method
- Fixed issue (applied patch) 614
  http://java.net/jira/browse/JERSEY-614
  Code cleaning - clearing List by clear(), not by removeAll() 
- Fixed issue (applied patch) 613
  http://java.net/jira/browse/JERSEY-613
  Removed unnecessary allocation
- Fixed issue (applied patch) 612
  http://java.net/jira/browse/JERSEY-612
  Correcting charset check in AbstractListElementProvider
- Fixed issue (applied patch) 611
  http://java.net/jira/browse/JERSEY-611
  Code attempts to substring off a trailing / but doesn't assign
  the substring so the operation was lost.
- Fixed issue 610
  http://java.net/jira/browse/JERSEY-610
  Fixed adding headers (not just auth related) to requests without
  entity